# appng-rest-api/src/main/resources/org/appng/api/rest/appng-openapi.yaml
@@ -11,7 +11,7 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0
 paths:
-  "/service/{site}/{application}/rest/openapi/page/{id}/{urlParams}":
+  "/service/{site}/{application}/rest/openapi/page/{id}":
     get:
       tags:
         - appNG
@@ -35,22 +35,18 @@ paths:
           required: true
           schema:
             type: string
-        - in: path
-          name: urlParams
-          description: the URL-Params of the page, in matrix style
-          required: true
-          style: matrix
-          explode: true
+        - in: query
+          name: _urlPath
+          description: the path to parametrize the page with
+          required: false         
           schema:
-            type: object
-            additionalProperties:
-              type: string
+            type: string
         - in: query
           name: _sect
           description: a list of section IDs to fill
           required: false         
           schema:
-            type: arry
+            type: array
             items:
               type: string
       responses:
@@ -207,17 +203,23 @@ components:
         _self:
           type: string
           description: The URL of the page
-        _pathTemplate:
+        _userUrl:
           type: string
-          description: A complete template for teh full path this page can handle
+          description: The URL of the page represented to the user
         user:
           $ref: "#/components/schemas/user"
         id:
           type: string
+        urlPath:
+          type: string
+          description: the current URL path 
         urlParameters:
           type: array
           items:
             $ref: "#/components/schemas/parameter"
+        urlTemplate:
+          type: string
+          description: A complete template for teh full path this page can handle
         getParameters:
           type: object
           additionalProperties:
@@ -290,9 +292,9 @@ components:
           items:
             $ref: "#/components/schemas/message"
         fields:
-          type: object
+          type: array
           description: A list of action-fields.
-          additionalProperties:
+          items:
             $ref: "#/components/schemas/actionField"
         permissions:
           type: array
@@ -343,6 +345,11 @@ components:
           $ref: "#/components/schemas/page"
         item:
           $ref: "#/components/schemas/item"
+        items:
+          type: array
+          description: The items of this page.
+          items:
+            $ref: "#/components/schemas/item"  
         permissions:
           type: array
           description: The permissions for this datasource.
@@ -438,11 +445,6 @@ components:
         isLast:
           type: boolean
           description: If this is the last page.
-        items:
-          type: array
-          description: The items of this page.
-          items:
-            $ref: "#/components/schemas/item"
     sort:
       type: object
       description: Marks a field as sortable, properties are filled only when sorting has
@@ -630,9 +632,9 @@ components:
           items:
             $ref: "#/components/schemas/message"
         fields:
-          type: object
+          type: array
           description: The child fields of this fieldValue.
-          additionalProperties:
+          items:
             $ref: "#/components/schemas/actionField"
     validationRule:
       type: object
